[package]
name        = "hash-attestation"
version     = "0.1.0"
edition     = "2021"
rust-version = "1.86"
description = "Sign and verify Kinetic Gain Protocol Suite documents using ed25519 over canonical JSON hashes. The missing 'this AEO actually came from the vendor' layer."
license     = "MIT"
repository  = "https://github.com/mizcausevic-dev/hash-attestation-rs"
homepage    = "https://kineticgain.com/"
documentation = "https://docs.rs/hash-attestation"
readme      = "README.md"
keywords    = ["attestation", "ed25519", "kinetic-gain", "canonical-json", "signature"]
categories  = ["cryptography", "data-structures"]
authors     = ["Miz Causevic <miz@kineticgain.com>"]

[dependencies]
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror  = "1.0"
sha2       = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
base64     = "0.22"
rand_core  = { version = "0.6", features = ["std"] }

[dev-dependencies]
rand_core  = { version = "0.6", features = ["std"] }
criterion  = "0.5"

[[bench]]
name    = "sign_verify"
harness = false

[lib]
name = "hash_attestation"
path = "src/lib.rs"
